--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slider_container {
+  width: 100vw;
+  max-width: 100vw;
+  height: calc(100vh + .2rem);
+  background-image: linear-gradient(
+      to left,
+      rgba(82, 53, 160, 0.05),
+      rgba(82, 53, 160, 1)
+    ),
+    url('../assets/slider.JPG');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
