--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,7 +5,7 @@
 .slider_container {
   width: 100vw;
   max-width: 100vw;
-  height: calc(100vh + .2rem);
+  height: calc(100vh + 0.2rem);
   background-image: linear-gradient(
       to left,
       rgba(0, 0, 0, 0.8),
@@ -18,4 +18,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.swiper-pagination-bullet {
+  background-color: transparent !important;
+  border: 2px solid #000 !important;
+  padding: 0.3rem;
+  z-index: 1000;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #000 !important;
 }
