--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,3 +57,66 @@ html {
   background-position: center;
   background-repeat: no-repeat;
 }
+
+/* Custom slider */
+.custom-image-slider {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.each-fade {
+  position: relative;
+  width: 100%;
+  height: calc(100vh + 0.5rem);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-size: cover;
+  background-position: center;
+  transition: opacity 1s ease-in-out, transform 1s ease-in-out;
+  opacity: 1;
+  transform: scale(1);
+}
+
+.each-fade img {
+  max-width: 100%;
+  height: auto;
+}
+
+.each-fade h2 {
+  font-size: 24px;
+  margin-top: 16px;
+  color: white;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
+
+.each-fade p {
+  font-size: 18px;
+  color: white;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+}
+
+.each-fade:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.each-fade:hover:after {
+  opacity: 1;
+}
+/* Custom slider end */
+
+.slider_container_two {
+  width: 100vw !important;
+  max-width: 100vw !important;
+  height: calc(100vh + 0.2rem) !important;
+}
