--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,12 +69,8 @@ html {
   width: 100vw;
   max-width: 100vw;
   height: calc(100vh + 0.2rem);
-  background-image: linear-gradient(
-      to left,
-      rgba(0, 0, 0, 0.8),
-      rgba(0, 0, 0, 0.05)
-    ),
-    url('../assets/slider.JPG');
+  background-image: 
+    url('../assets/slider/slider_bg_3.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
