--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ html {
   border-radius: 0.7rem 0 0.7rem 0 !important;
 }
 
-.left_top_right_bottom_radius_big{
+.left_top_right_bottom_radius_big {
   border-radius: 1.5rem 0 1.5rem 0 !important;
 }
 
@@ -62,6 +62,28 @@ html {
   background-repeat: no-repeat;
 }
 
+.secondaryBg {
+  position: relative;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url('../assets/spec/bg.png');
+}
+
+.secondaryBg::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('../assets/spec/bg.png'); /* Same as the background image */
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.5; /* Adjust the opacity as needed (0.0 to 1.0) */
+}
+
 .slider_container_two {
   width: 100vw !important;
   max-width: 100vw !important;
@@ -73,8 +95,7 @@ html {
   width: 100vw;
   max-width: 100vw;
   height: calc(100vh + 0.2rem);
-  background-image: 
-    url('../assets/slider/slider_bg_3.png');
+  background-image: url('../assets/slider/slider_bg_3.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -83,13 +104,15 @@ html {
   align-items: center;
   overflow: hidden !important;
 
+  /* lower the opacity */
+  opacity: 0.6 !important;
   position: absolute;
   top: 0;
   right: 0;
 }
 
 /* Call to action */
-.cta_bg{
+.cta_bg {
   background-image: url('../assets/cta/cta_bg.png');
   background-size: cover;
   background-position: center;
