--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,9 +117,9 @@ html {
   text-align: center;
   transition: 0.4s ease-out;
   position: relative;
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .play-button:hover {
@@ -156,4 +156,14 @@ html {
     transform: scale(1.8);
     opacity: 0;
   }
+}
+
+/* Login */
+.login_bg {
+  /* soft yellow and white gradient */
+  /* background-color: #ffe9a1; */
+  background-image: linear-gradient(315deg, #ffde70 0%, #fff 74%);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
